--- a/jenkinsfile
+++ b/jenkinsfile
@@ -7,11 +7,15 @@ pipeline {
     }
 
     stages {
-        stage('Checkout Code') {
-            steps {
-                git branch: 'main', url: "${GIT_REPO}"
-            }
-        }
+            stage('Checkout Code') {
+                checkout([$class: 'GitSCM',
+                        branches: [[name: '*/main']],
+                        userRemoteConfigs: [[
+                        url: 'https://github.com/bhavanachoudhari24/step-by-step-project.git',
+                        credentialsId: 'github-cred'
+        ]]
+    ])
+}
 
         stage('Deploy to EC2 Webserver') {
             steps {
@@ -34,3 +38,4 @@ pipeline {
     }
 
 }
+
